Enable preview features and create a much simpler hello world